Revision history for perl distribution Mojolicious-Plugin-AssetPack

0.63 Not Released
 - Fix responding 404 when in-memory asset could not be found

0.62 2015-08-27T11:40:41-0400
 - Fix @import tracking #62

0.61 2015-08-23T13:34:34+0200
 - Add include_paths() to Scss preprocessor
 - Fix using SASS_PATH environment variable when calculating checksum #60
 - Deprecating asset->preprocessor() in favor of asset->preprocessors->add()

0.60 2015-08-20T17:21:54+0200
 - Fix detecting changed sass/scss files in sub directories, with leading underscore

0.59 2015-08-20T14:42:25+0200
 - Cannot look for packed files in "source_paths"
 - MOJO_ASSETPACK_DEBUG need to be set to "2" for more verbose debug

0.58 2015-08-09T14:28:04+0200
 - Change "source_paths" to return original reference and not a copy
 - Need to look for packed files in all directories (source_paths+public)

0.57 2015-08-09T11:34:21+0200
 - Add support for "source_paths" (EXPERIMENTAL) #58
 - Add support for fetching assets using a proxy

0.56 2015-08-05T10:44:15+0200
 - Add purge() method (EXPERIMENTAL)
 - Add support for wildcards in filenames (EXPERIMENTAL) #52

0.55 2015-05-25T12:58:04+0200
 - Will not add memory asset route if not needed #56
 - Make error visible regardless of page scroll position #57
   Contributor: Zoffix Znet

0.54 2015-04-23T17:37:01+0200
 - Fix saving unchanged assets on disk

0.53 2015-04-23T17:27:41+0200
 - Fix regenerating sprites:// assets

0.5201 2015-04-20T08:48:47+0200
 - Fix sprites.t
 - Fix skipping t/plugin-with-assets.t

0.52 2015-04-18T12:54:40+0200
 - Add support for generating image sprites and css
 - Add EXPERIMENTAL ::Handlers::Sprites, ::Handlers::Http and ::Handlers::Https
 - Add ::Asset::content()
 - Rename ::Asset::url() to path().
 - Remove ::Asset::add_chunk()

0.51 2015-04-16T08:15:50+0200
 - Can reload assets on server reload (EXPERIMENTAL)

0.50 2015-04-13T11:37:08Z +0200
 - Need to start with a fresh asset to avoid adding duplicate processed