@@ -2,6 +2,7 @@ Revision history for perl distribution Mojolicious-Plugin-AssetPack
 
 0.63 Not Released
  - Fix responding 404 when in-memory asset could not be found
+ - Add support for custom response headers #55
 
 0.62 2015-08-27T11:40:41-0400
  - Fix @import tracking #62
